Change back to stable

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,5 @@
             "email": "contact@libreteam.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
