--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "autoload": {
         "psr-4": {
             "LIBRESSLtd\\DeepPermission\\": "src/"
-        }
+        },
+        "classmap": ["src/", "src/controllers"]
     },
     "minimum-stability": "stable"
 }
