--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "psr-4": {
             "LIBRESSLtd\\DeepPermission\\": "src/"
         },
-        "classmap": ["src/", "src/controllers"]
+        "classmap": ["src/controllers"]
     },
     "minimum-stability": "stable"
 }
