--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "acacha/admin-lte-template-laravel": "*",
         "libressltd/lbform": "*",
-        "maatwebsite/excel": "~2.1.0"
+        "maatwebsite/excel": "~2.1.0",
         "libressltd/lbform": "*",
         "maatwebsite/excel": "~2.1.0",
         "libressltd/lbsa": "*",
