--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,8 @@
     "description": "full stack package allow deep permission system",
     "type": "library",
     "require": {
-        "acacha/admin-lte-template-laravel": "*",
         "libressltd/lbform": "*",
-        "maatwebsite/excel": "~2.1.0",
+        "maatwebsite/excel": "*",
         "alsofronie/eloquent-uuid": "*"
     },
     "license": "MIT",
